# Picasso

./: .gitignore  CLAUDE.md  Picasso.bat  imgproc.yaml  install.bat  picasso-suffixes.yaml  pyproject.toml  update-alida.bat
src/imgproc/: __init__.py  batch_meta.py  cli.py  config.py  output.py
src/imgproc/engine/: __init__.py  background.py  detect.py  normalize.py  stats.py
src/imgproc/ingest/: __init__.py  hero.py  sort.py  sortlib.py
src/imgproc/report/: __init__.py  template.html.j2  writer.py
src/imgproc/sheetcheck/: __init__.py  rules.py  suffixes.py  suppressions.py
src/imgproc/updater/: __init__.py  github.py  swap.py
src/imgproc/web/: __init__.py  app.py
src/imgproc/web/static/: app.js  demo.html  demo_resizer.css  demo_resizer.js  index.html  modals.css  modals.js  reviewer.css  reviewer.html  reviewer.js  sheetcheck.css  sheetcheck.html  sheetcheck.js  sort.css  sort.html  sort.js  style.css  update_banner.js
tests/: conftest.py  test_cli.py  test_engine.py
